[package]
name = "rwkv-rs"
version = { workspace = true }
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggml-rwkv = { path = "../ggml-rwkv" }

num_cpus = "1.15.0"

rand = { workspace = true }

bytemuck = "1.13.1"
partial_sort = "0.2.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
tokenizers = "0.13.3"

# Used for the `convert` feature
serde_json = { version = "1.0", optional = true }
protobuf = { version = "= 2.14.0", optional = true }


[features]
convert = ["dep:serde_json", "dep:protobuf"]